addind extra comments

--- a/2024-02-02 Probabilities.ipynb
+++ b/2024-02-02 Probabilities.ipynb
@@ -325,7 +325,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And there we have it. If we switch doors, we double our probability of winning! 🤯"
+    "And there we have it. If we switch doors, we double our probability of winning! 🤯\n",
+    "\n",
+    "To understand the solution, we need to understand why we tend to choose the incorrect solution that it's 50/50. That happens because we're using incorrect assumptions. We usually think of probabilities for independent, random events. However, for that to be true, the process we're studying must be **random** and have **probabilities that do not change**. Unfortunately, the Monty Hall problem does not satisfy either requirement — the host _doesn't_ choose randomly and, when he does, the probability _does_ change."
    ]
   },
   {
