getting rid of pesky dollar signs

--- a/2024-02-09 Discrete, Continuous, PDF and Normal.ipynb
+++ b/2024-02-09 Discrete, Continuous, PDF and Normal.ipynb
@@ -100,7 +100,7 @@
    "source": [
     "## Exercise 2\n",
     "\n",
-    "Lisa plays a game in which there are only two outcomes — winning or losing. If she loses, she has to pay $100. If she wins, she receives $500. The probability of winning is 20%. What is the expected value for winning a single game on average? What about 10 games? And 100 games?"
+    "Lisa plays a game in which there are only two outcomes — winning or losing. If she loses, she has to pay SEK 100. If she wins, she receives SEK 500. The probability of winning is 20%. What is the expected value for winning a single game on average? What about 10 games? And 100 games?"
    ]
   },
   {
@@ -111,7 +111,7 @@
     "\n",
     "| outcomes | wins | loses |\n",
     "| -- | -- | -- |\n",
-    "| value | $ 500 | $ -100 |\n",
+    "| value | SEK 500 | SEK -100 |\n",
     "| prob | 20% | 80% |\n",
     "\n",
     "Now to the expected value:\n",
@@ -119,13 +119,13 @@
     "$$ E(X) = X_1 \\cdot P_1 + X_2 \\cdot P_2 $$\n",
     "$$ E(X) = 500 \\cdot 0.20 + (-100) \\cdot 0.80 $$\n",
     "$$ E(X) = 100 - 80 $$\n",
-    "$$ E(X) = \\$20 $$\n",
+    "$$ E(X) = SEK\\ 20 $$\n",
     "\n",
     "So if for each single game the expected value is $20, for multiple games we multiply that value:\n",
     "\n",
-    "$$ 10 \\quad games = \\$200 $$\n",
+    "$$ 10 \\quad games = SEK\\ 200 $$\n",
     "\n",
-    "$$ 100 \\quad games = \\$2000 $$"
+    "$$ 100 \\quad games = SEK\\ 2000 $$"
    ]
   },
   {
